--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
       </section>
       <section id="controls">
         <button @click="attackMonster">ATTACK</button>
-        <button>SPECIAL ATTACK</button>
+        <!--Special attack should happen only every 3 rounds-->
+        <button
+        :disabled="mayUseSpecialAttack"
+        @click="specialAttackMonster">
+          SPECIAL ATTACK
+        </button>
         <button>HEAL</button>
         <button>SURRENDER</button>
       </section>
